# ACM-AI-Spring-2026-Prediction-Markets

./: .env.example  .gitignore  README.md  pyproject.toml
backtest/: engine.py  metrics.py
config/: settings.yaml
data/: engineer.py  schema.py
data/ingestion/: crypto_client.py  kalshi_client.py  weather_client.py
docs/: narrative.md  repo_structure.md  risk_auditor_prompt.md  runbook.md  swe_fix_prompt.md
execution/: dry_run.py  kelly.py  order_manager.py  risk.py  trader.py
extensions/: SPEC.md
extensions/mean_reversion/: README.md  backtest.ipynb  mean_reversion_dry_run.py  strategy.py
extensions/momentum/: README.md  backtest.ipynb  momentum_dry_run.py  strategy.py
extensions/sports_reversion/: README.md  strategy.py  sweep.py
extensions/weather_arb/: 4312480.csv  README.md  live_dry_run.py  live_signals.py  strategy.py
memory/: MEMORY.md  feedback_env_file.md
models/: evaluate.py  predict.py  train.py
nlp/: news_client.py  relevance.py  sentiment.json  sentiment.py
notebooks/: backtest_results.ipynb  backtest_weather.ipynb  performance.ipynb  sports_reversion.ipynb
scripts/: create_dummy_historical_data.py  label_resolved.py  run_bot.sh  run_dry_run_bot.py  run_pipeline.sh  start.sh  test_execution.py  validate_features.py
tests/: smoketest_crypto.py  test_news_client.py  test_news_client_init_db.py
