[project]
name = "prediction-markets"
version = "0.1.0"
description = "ACM AI Spring 2026 — Quantitative trading bot for Kalshi prediction markets"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "transformers>=4.40",
    "sentence-transformers>=2.7",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "scikit-learn>=1.4",
    "pandas>=2.0",
    "pyarrow>=15.0",
    "pydantic>=2.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "coinbase-advanced-py>=1.0",
    "vaderSentiment>=3.3",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "cryptography>=47.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backtest", "data", "execution", "models", "nlp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest-xdist>=3.8.0",
]
